0.6:
  - Allow the sleep function to be provided (so that
    various alternatives other than time.sleep can
    be used), ie eventlet.sleep (or other).
0.5:
  - Make it possible to provide a acquisition timeout
    to the interprocess lock (which when acquisition
    can not complete in the desired time will return
    false).
0.4:
  - Have the interprocess lock acquire take a blocking
    keyword argument (defaulting to true) that can avoid
    blocking trying to acquire the lock
0.3:
  - Renamed from 'shared_lock' to 'fasteners'
0.2.1
  - Fix delay not working as expected
0.2:
  - Add a interprocess lock
0.1:
  - Add travis yaml file
  - Initial commit/import