@@ -2,6 +2,8 @@
   - Allow the sleep function to be provided (so that
     various alternatives other than time.sleep can
     be used), ie eventlet.sleep (or other).
+  - Remove dependency on oslo.utils (replace with
+    small utility code that achieves the same effect).
 0.5:
   - Make it possible to provide a acquisition timeout
     to the interprocess lock (which when acquisition
